# goit-python-web-hw5

./: get_currency.py  index.html  main.js  pyproject.toml  server.py  timing.py
