[tool.poetry]
name = "goit-python-web-hw5"
version = "0.1.0"
description = ""
authors = ["NilKad <kadulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
names = "^0.3.0"
websockets = "^12.0"
aiofile = "^3.8.8"
aiohttp = "^3.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
